force-app/main/default/objects/Events__c/Events__c.object-meta.xml
<CustomObject>
    <compactLayoutAssignment
  >Standard_Event_Compact_Layout</compactLayoutAssignment>
    <description
  >These are e.Republic Events - tradeshows, executive events, webinars, roundtables, custom events, etc.</description>
    <label>Event or Conference</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events and Conferences</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>