force-app/main/default/objects/Events__c/fields/Actual_Attended__c.field-meta.xml
<CustomField>
    <fullName>Actual_Attended__c</fullName>
    <description
  >This is the total number of registered attendees (not including sponsors, press, or staff) minus the no shows.</description>
    <inlineHelpText
  >This is the total number of registered attendees (not including sponsors, press, or staff) minus the no shows.</inlineHelpText>
    <label>Actual Attended Roll-up Summary</label>
    <summaryFilterItems>
        <field>Registration__c.Reg_Type__c</field>
        <operation>notEqual</operation>
        <value>Sponsor, Press, Staff</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Registration__c.Event_No_Show__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Registration__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>