force-app/main/default/objects/Events__c/fields/Actual_Attended_Formula__c.field-meta.xml
<CustomField>
    <fullName>Actual_Attended_Formula__c</fullName>
    <description
  >This is the total number of registered attendees (not including sponsors, press, or staff) minus the no shows.</description>
    <formula>IF(
     Event_Start_Date__c &lt;=  TODAY() , Attendee_Registrations_Formula__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >This is the total number of registered attendees (not including sponsors, press, or staff) minus the no shows.</inlineHelpText>
    <label>Actual Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>