force-app/main/default/objects/Events__c/fields/Actuals_Last_Synced__c.field-meta.xml
<CustomField>
    <fullName>Actuals_Last_Synced__c</fullName>
    <description
  >Time stamp when the actuals for this event were last synced.</description>
    <inlineHelpText
  >Time stamp when the actuals for this event were last synced.</inlineHelpText>
    <label>Actuals Last Synced</label>
    <type>DateTime</type>
</CustomField>