force-app/main/default/objects/Events__c/fields/Actuals_Sync__c.field-meta.xml
<CustomField>
    <fullName>Actuals_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Checking this box will sync the Logistics Financials actuals. Runs a flow and then clears this box after it runs.</description>
    <inlineHelpText
  >Checking this box will sync the Logistics Financials actuals. Runs a flow and then clears this box after it runs.</inlineHelpText>
    <label>Actuals Sync</label>
    <type>Checkbox</type>
</CustomField>