force-app/main/default/objects/Events__c/fields/Ad_Bd_2_Details__c.field-meta.xml
<CustomField>
    <fullName>Ad_Bd_2_Details__c</fullName>
    <inlineHelpText
  >Location or dial-in details for this meeting.</inlineHelpText>
    <label>Ad Bd #2 Details</label>
    <type>TextArea</type>
</CustomField>