force-app/main/default/objects/Events__c/fields/Ad_Bd_2_Status__c.field-meta.xml
<CustomField>
    <fullName>Ad_Bd_2_Status__c</fullName>
    <label>Ad Bd #2 Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>CONFIRMED</fullName>
            </value>
            <value>
                <fullName>RESCHEDULED</fullName>
            </value>
            <value>
                <fullName>CANCELLED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>