force-app/main/default/objects/Events__c/fields/Ad_Bd_3_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Ad_Bd_3_Display_Name__c</fullName>
    <defaultValue>&quot;Advisory Board Meeting #3&quot;</defaultValue>
    <description>Display Name Used for More Info Piece Automation</description>
    <inlineHelpText
  >Display Name Used for More Info Piece Automation</inlineHelpText>
    <label>Ad Bd #3 Display Name</label>
    <type>TextArea</type>
</CustomField>