force-app/main/default/objects/Events__c/fields/Ad_Bd_3_Format__c.field-meta.xml
<CustomField>
    <fullName>Ad_Bd_3_Format__c</fullName>
    <label>Ad Bd #3 Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>