force-app/main/default/objects/Events__c/fields/Ad_Bd_3_Time__c.field-meta.xml
<CustomField>
    <fullName>Ad_Bd_3_Time__c</fullName>
    <inlineHelpText>Meeting time (e.g.: 10:00 AM - 11:30 AM ET)</inlineHelpText>
    <label>Ad Bd #3 Time</label>
    <length>32</length>
    <type>Text</type>
</CustomField>