force-app/main/default/objects/Events__c/fields/Ad_Board_Invitees__c.field-meta.xml
<CustomField>
    <fullName>Ad_Board_Invitees__c</fullName>
    <description
  >Used in Event Datasheet automation to override last year&apos;s ad board attendee list when that list needs to be edited. Once uploaded, this year&apos;s final confirmed ad board list will override this field in the datasheet automation.</description>
    <inlineHelpText
  >Used in Event Datasheet automation to override last year&apos;s ad board attendee list when that list needs to be edited. Once uploaded, this year&apos;s final confirmed ad board list will override this field in the datasheet automation.</inlineHelpText>
    <label>LY Ad Bd Member Override</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>