force-app/main/default/objects/Events__c/fields/Ad_Board_Sample_List__c.field-meta.xml
<CustomField>
    <fullName>Ad_Board_Sample_List__c</fullName>
    <description
  >Used in event datasheet automation for first-time events where we can&apos;t pull &quot;Last Year&apos;s Attendees&quot;. The invitee list will override this list.</description>
    <inlineHelpText
  >Used in event datasheet automation for first-time events where we can&apos;t pull &quot;Last Year&apos;s Attendees&quot;. The invitee list will override this list.</inlineHelpText>
    <label>Ad Board Sample List</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>