force-app/main/default/objects/Events__c/fields/AdBoard_Industry__c.field-meta.xml
<CustomField>
    <fullName>AdBoard_Industry__c</fullName>
    <label>AdBoard Industry</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>