force-app/main/default/objects/Events__c/fields/AdBoard_Public_Sector__c.field-meta.xml
<CustomField>
    <fullName>AdBoard_Public_Sector__c</fullName>
    <label>AdBoard Public Sector</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>