force-app/main/default/objects/Events__c/fields/Addendum__c.field-meta.xml
<CustomField>
    <fullName>Addendum__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Check this box if this event will have an addendum.</description>
    <label>Addendum</label>
    <type>Checkbox</type>
</CustomField>