force-app/main/default/objects/Events__c/fields/Addendum_Job_Order_Due__c.field-meta.xml
<CustomField>
    <fullName>Addendum_Job_Order_Due__c</fullName>
    <label>Addendum Job Order Due</label>
    <type>Date</type>
</CustomField>