force-app/main/default/objects/Events__c/fields/Addendum_Sponsor_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Addendum_Sponsor_Deadline__c</fullName>
    <label>Addendum &amp; Signage Sponsor Deadline 12PM</label>
    <type>Date</type>
</CustomField>