force-app/main/default/objects/Events__c/fields/Advisory_Board_2__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Board_2__c</fullName>
    <description
  >The date of the second Advisory Board meeting for this event</description>
    <inlineHelpText
  >The date of the second Advisory Board meeting for this event</inlineHelpText>
    <label>Advisory Board #2</label>
    <type>Date</type>
</CustomField>