force-app/main/default/objects/Events__c/fields/Advisory_Board_3__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Board_3__c</fullName>
    <description
  >The date of the third Advisory Board meeting for this event</description>
    <inlineHelpText
  >The date of the third Advisory Board meeting for this event</inlineHelpText>
    <label>Advisory Board #3</label>
    <type>Date</type>
</CustomField>