force-app/main/default/objects/Events__c/fields/Advisory_Board_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Board_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advisory Board Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Events_and_Conferences6</relationshipName>
    <type>Lookup</type>
</CustomField>