force-app/main/default/objects/Events__c/fields/Agenda_Link__c.field-meta.xml
<CustomField>
    <fullName>Agenda_Link__c</fullName>
    <label>Agenda</label>
    <type>Url</type>
</CustomField>