force-app/main/default/objects/Events__c/fields/All_Contracts__c.field-meta.xml
<CustomField>
    <fullName>All_Contracts__c</fullName>
    <description
  >All contracts for the event, broken down by sponsorship level.</description>
    <formula
  >HYPERLINK(&quot;/lightning/r/Report/00O1O0000088iRZUAY/view?fv0=&quot;&amp;Id,&quot;All Contracts&quot;)</formula>
    <label>All Contracts</label>
    <type>Text</type>
</CustomField>