force-app/main/default/objects/Events__c/fields/AM_Keynote_1__c.field-meta.xml
<CustomField>
    <fullName>AM_Keynote_1__c</fullName>
    <label>AM Keynote 1</label>
    <length>150</length>
    <type>Text</type>
</CustomField>