force-app/main/default/objects/Events__c/fields/AM_Keynote_2__c.field-meta.xml
<CustomField>
    <fullName>AM_Keynote_2__c</fullName>
    <label>AM Keynote 2</label>
    <length>150</length>
    <type>Text</type>
</CustomField>