force-app/main/default/objects/Events__c/fields/Anchor_UW_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Anchor_UW_Deadline__c</fullName>
    <label>Anchor / UW Deadline</label>
    <type>Date</type>
</CustomField>