force-app/main/default/objects/Events__c/fields/archiveend__c.field-meta.xml
<CustomField>
    <fullName>archiveend__c</fullName>
    <description
  >This is the time when the lobby closes for the archived events – when users are no longer able to launch the event console. This date is normally three months or more, depending on the contract. e.g., Thu, 30 Apr 2009 12:19 PDT</description>
    <inlineHelpText
  >This is the time when the lobby closes for the archived events – when users are no longer able to launch the event console. This date is normally three months or more, depending on the contract. e.g., Thu, 30 Apr 2009 12:19 PDT</inlineHelpText>
    <label>On24 archiveend</label>
    <type>DateTime</type>
</CustomField>