force-app/main/default/objects/Events__c/fields/Assigned_Primary_Onsite_Staff__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Primary_Onsite_Staff__c</fullName>
    <inlineHelpText
  >The number of assigned Primary Event Contact Roles for Onsite Staff at the event.</inlineHelpText>
    <label>Assigned Primary Onsite Staff</label>
    <summaryFilterItems>
        <field>Event_Contact_Role__c.Primary__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Event_Contact_Role__c.Role__c</field>
        <operation>contains</operation>
        <value>Onsite</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Event_Contact_Role__c.Internal_Contact__c</field>
        <operation>notEqual</operation>
        <value />
    </summaryFilterItems>
    <summaryForeignKey>Event_Contact_Role__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>