force-app/main/default/objects/Events__c/fields/At_Sponsor_Capacity__c.field-meta.xml
<CustomField>
    <fullName>At_Sponsor_Capacity__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Prevents sponsors who have claimed all of their contract passes from purchasing an additional pass.</description>
    <inlineHelpText
  >Prevents sponsors who have claimed all of their contract passes from purchasing an additional pass.</inlineHelpText>
    <label>At Sponsor Capacity</label>
    <type>Checkbox</type>
</CustomField>