force-app/main/default/objects/Events__c/fields/attendedarchivecount__c.field-meta.xml
<CustomField>
    <fullName>attendedarchivecount__c</fullName>
    <description
  >The number of users who attended the archive portion of the event. A cumulative number.</description>
    <inlineHelpText
  >The number of users who attended the archive portion of the event. A cumulative number.</inlineHelpText>
    <label>On24 attendedarchivecount</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>