force-app/main/default/objects/Events__c/fields/attendedcount__c.field-meta.xml
<CustomField>
    <fullName>attendedcount__c</fullName>
    <description
  >The number of attendees for the event. A cumulative number.</description>
    <inlineHelpText
  >The number of attendees for the event. A cumulative number.</inlineHelpText>
    <label>On24 attendedcount</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>