force-app/main/default/objects/Events__c/fields/attendedlivecount__c.field-meta.xml
<CustomField>
    <fullName>attendedlivecount__c</fullName>
    <description
  >The number of users who attended the live portion of the event. A cumulative number.</description>
    <inlineHelpText
  >The number of users who attended the live portion of the event. A cumulative number.</inlineHelpText>
    <label>On24 attendedlivecount</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>