force-app/main/default/objects/Events__c/fields/Attendee_Registrations__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Registrations__c</fullName>
    <description
  >This is the number of attendee registrations for this event. This does not include sponsors, staff, or press.</description>
    <inlineHelpText
  >This is the number of attendee registrations for this event. This does not include sponsors, staff, or press.</inlineHelpText>
    <label>Attendee Reg Roll-Up Summary</label>
    <summaryFilterItems>
        <field>Registration__c.Reg_Type__c</field>
        <operation>notEqual</operation>
        <value>Sponsor, Press, Staff</value>
    </summaryFilterItems>
    <summaryForeignKey>Registration__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>