force-app/main/default/objects/Events__c/fields/Attendee_Registrations_Formula__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Registrations_Formula__c</fullName>
    <description
  >All attendee registrations minus any no shows or cancellations. (Check the Include Industry check box if you want this to include industry registrations.)</description>
    <formula
  >IF( Include_Industry__c = TRUE, Govt_Registrations__c + Industry_Registrations__c -  No_Shows_Cancellations_Formula__c , Govt_Registrations__c -No_Shows_Cancellations_Formula__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Registrations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>