force-app/main/default/objects/Events__c/fields/Attendee_Survey__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attendee Survey</label>
    <type>Checkbox</type>
</CustomField>