force-app/main/default/objects/Events__c/fields/Audience_Short__c.field-meta.xml
<CustomField>
    <fullName>Audience_Short__c</fullName>
    <description
  >Audience description which pulls into More Info Piece automation</description>
    <inlineHelpText
  >Audience description which pulls into More Info Piece automation</inlineHelpText>
    <label>Audience Short</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>