force-app/main/default/objects/Events__c/fields/Average_No_Show_Rate__c.field-meta.xml
<CustomField>
    <fullName>Average_No_Show_Rate__c</fullName>
    <description
  >Average attendee no-show rate based on past events.</description>
    <inlineHelpText
  >Indicate the average no-show rate from past events.</inlineHelpText>
    <label>Average No-Show Rate</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>