force-app/main/default/objects/Events__c/fields/Award_Prog_PP_Job_Order_Due__c.field-meta.xml
<CustomField>
    <fullName>Award_Prog_PP_Job_Order_Due__c</fullName>
    <label>Awards Slides Job Order Due</label>
    <type>Date</type>
</CustomField>