force-app/main/default/objects/Events__c/fields/Award_Prog_PP_Slides__c.field-meta.xml
<CustomField>
    <fullName>Award_Prog_PP_Slides__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Award Prog PP Slides</label>
    <type>Checkbox</type>
</CustomField>