force-app/main/default/objects/Events__c/fields/Awards__c.field-meta.xml
<CustomField>
    <fullName>Awards__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Awards</label>
    <type>Checkbox</type>
</CustomField>