force-app/main/default/objects/Events__c/fields/Awards_Job_Order_Due__c.field-meta.xml
<CustomField>
    <fullName>Awards_Job_Order_Due__c</fullName>
    <label>Awards Job Order Due</label>
    <type>Date</type>
</CustomField>