force-app/main/default/objects/Events__c/fields/Awards_Program_Agenda__c.field-meta.xml
<CustomField>
    <fullName>Awards_Program_Agenda__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Awards Program Agenda</label>
    <type>Checkbox</type>
</CustomField>