force-app/main/default/objects/Events__c/fields/Awards_Program_Agenda_Job_Order_Due__c.field-meta.xml
<CustomField>
    <fullName>Awards_Program_Agenda_Job_Order_Due__c</fullName>
    <label>Awards Program Guide Job Order Due</label>
    <type>Date</type>
</CustomField>