force-app/main/default/objects/Events__c/fields/Badge_Preview_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Badge_Preview_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Created for Ticket #91174: Only used on Standard Events. To be Manually unchecked by registration when badge editing is no longer available.</description>
    <inlineHelpText
  >When checked, the badge preview link will allow registrants to preview and update their badge.
When unchecked, the badge preview link will inform registrants that previewing the badge is no longer available for this event.</inlineHelpText>
    <label>Badge Preview Enabled</label>
    <type>Checkbox</type>
</CustomField>