force-app/main/default/objects/Events__c/fields/Badge_Scanning_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Badge_Scanning_Instructions__c</fullName>
    <label>Badge Scanning Instructions</label>
    <type>Url</type>
</CustomField>