force-app/main/default/objects/Events__c/fields/Best_Practices_Guide__c.field-meta.xml
<CustomField>
    <fullName>Best_Practices_Guide__c</fullName>
    <label>Best Practices Guide</label>
    <type>Url</type>
</CustomField>