force-app/main/default/objects/Events__c/fields/Box_Lunches_Guaranteed__c.field-meta.xml
<CustomField>
    <fullName>Box_Lunches_Guaranteed__c</fullName>
    <label>Box Lunches Guaranteed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>