force-app/main/default/objects/Events__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description
  >The primary brand of the event. Event may still be listed on multiple websites.</description>
    <inlineHelpText
  >The primary brand of the event. Event may still be listed on multiple websites.</inlineHelpText>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GOVERNING</fullName>
            </value>
            <value>
                <fullName>GOVTECH</fullName>
            </value>
            <value>
                <fullName>PCIO</fullName>
            </value>
            <value>
                <fullName>CDE</fullName>
            </value>
            <value>
                <fullName>CDG</fullName>
            </value>
            <value>
                <fullName>EMERGENCYMGMT</fullName>
            </value>
            <value>
                <fullName>EREPUBLIC</fullName>
            </value>
            <value>
                <fullName>DIGITAL_COMMUNITIES</fullName>
            </value>
            <value>
                <fullName>FUTURE_STRUCTURE</fullName>
            </value>
            <value>
                <fullName>INSIDER CA</fullName>
            </value>
            <value>
                <fullName>INSIDER TX</fullName>
            </value>
            <value>
                <fullName>INSIDER FL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>