force-app/main/default/objects/Events__c/fields/Breakfast_Roundtable_Room__c.field-meta.xml
<CustomField>
    <fullName>Breakfast_Roundtable_Room__c</fullName>
    <label>Breakfast Roundtable Room</label>
    <length>255</length>
    <type>Text</type>
</CustomField>