force-app/main/default/objects/Events__c/fields/Calendar_Reminder_URL__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Reminder_URL__c</fullName>
    <description
  >Insert the URL for the uploaded ICS file in this field. This field will be visible on the standard event confirmation template.</description>
    <inlineHelpText
  >Insert the URL for the uploaded ICS file in this field. This field will be visible on the standard event confirmation template.</inlineHelpText>
    <label>Calendar Reminder URL</label>
    <type>Url</type>
</CustomField>