force-app/main/default/objects/Events__c/fields/Campaigns_Created__c.field-meta.xml
<CustomField>
    <fullName>Campaigns_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Checking this box creates 5 email campaigns for this webinar. Hidden field checked through the &quot;Create Campaigns&quot; action. 
8/4/2023 NOTE: The Process Builder this triggered has been deactivated due to apex cpu timeout. Please use the Create Campaigns screen flow instead.</description>
    <inlineHelpText
  >Checking this box creates 5 email campaigns for this webinar. Hidden field checked through the &quot;Create Campaigns&quot; action.</inlineHelpText>
    <label>Create Campaigns</label>
    <type>Checkbox</type>
</CustomField>